# jack

./: CMakeLists.txt  README.md
cmake/: FindJackMake.cmake
examples/: CMakeLists.txt
examples/gol/: CMakeLists.txt
examples/gol/meta/: gol.cmake
jack_core/: CMakeLists.txt  CMakePresets.json  README.md  deps.cmake  gitlab_ci_build.sh
jack_core/src/: CMakeLists.txt  json-adapter.cmake  websocket-adapter.cmake
jack_core/src/jack/: agent.cpp
jack_core/src/tests/: .clang-format  CMakeLists.txt  agents.cpp  messages.cpp  testhelpers.h  tests.mod.jack.json  tests.prj.jack.json
jack_core/src/tests/impl/: testssampleentrypoint.cpp
jack_core/src/tests/meta/: tests.cmake  testsenumsmeta.cpp  testsenumsmeta.h  testsevents.h  testsproject.cpp  testsproject.h  testsservicecomponents.h  teststemplates.json
jack_core/src/tests/meta/messages/: agentplanswitchmeta.cpp  agentplanswitchmeta.h  dummyflagmeta.cpp  dummyflagmeta.h  pingmeta.cpp  pingmeta.h  pingpongbeliefsetmeta.cpp  pingpongbeliefsetmeta.h  pongmeta.cpp  pongmeta.h
jack_make/: CMakeLists.txt
jack_make/templates/: project.cmake.j2
